package com.avasaysayava.bagrutproject;

public class Constants {
    public static final int LEVEL_UPS = 60;
    public static final int LEVEL_SCALE = 5;
    public static final int PREVIEW_UPS = 0;
    public static final int PREVIEW_SCALE = 1;
}
